// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BtcLabel when unit is not set renders amount as BTC 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  numberOfLines={undefined}
  style={
    Array [
      Object {
        "color": "#504F63",
        "fontFamily": "Avenir Next",
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  0.21123456 ₿
</Text>
`;

exports[`BtcLabel when unit is set to "BTC" renders amount as BTC 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  numberOfLines={undefined}
  style={
    Array [
      Object {
        "color": "#504F63",
        "fontFamily": "Avenir Next",
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  0.21123456 ₿
</Text>
`;

exports[`BtcLabel when unit is set to "mBTC" renders amount as mBTC 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  numberOfLines={undefined}
  style={
    Array [
      Object {
        "color": "#504F63",
        "fontFamily": "Avenir Next",
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  211.23456 m₿
</Text>
`;
